# wc_over_internet

./: README.md  pyproject.toml
simplewc/: __main__.py  config.py  example_client.py  exceptions.py  model.py  servicer.py  setup.py  storage.py
simplewc/protos/: wc.proto  wc_pb2.py  wc_pb2.pyi  wc_pb2_grpc.py
simplewc/simplewc/: __init__.py  __main__.py  config.py  example_client.py  exceptions.py  model.py  servicer.py  storage.py
simplewc/simplewc/protos/: __init__.py  wc_pb2.py  wc_pb2.pyi  wc_pb2_grpc.py
simplewc/test/: conftest.py  test_model.py  test_security.py
test/: conftest.py  test_model.py  test_security.py  virtusize.html.bytes
