[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | node_modules
)/
'''

[tool.pytestdocgen]
src-dir = '.'
format = 'markdown'
test-dir = 'test'
output = 'TEST_DOC.md'

[tool.poetry]
name = "simplewc"
version = "0.0.1"
description = "A uber serious word counter 😉"
authors = ["KMilhan"]
packages = [
    { include="simplewc", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
requests = "*"
pymongo = "^3.9"
redis = "^3.3"
grpcio = "^1.24"

[tool.poetry.dev-dependencies]
black = "==19.3b0"
isort = "*"
pylint = "*"
pytest = ">3.4"
pytest-cov = "*"
pytest-sugar = "*"
bumpversion = "*"
grpcio_tools = "^1.24"

[tool.isort]
line_length = 80
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
skip_glob = ".egg,.git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist,venv,node_modules"
default_section = "THIRDPARTY"
known_first_party = "simplewc"
no_lines_before = "LOCALFOLDER"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
